--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <form>
                         <input type = 'text' placeholder = "Search for a recipe">
                     </form>
+                    <p class = "note">Note: Use enter on keyboard to search on desktop and use return to search on mobile.</p>
                     <div class="search">
                         <div class="item">
                             <img src = "food.jpeg" alt = "">
